--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Zoom Clone using NodeJS, Websockets and WebRTC",
   "scripts": {
-    "dev" : "nodemon"
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,8 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "express" : "^4.18.2",
-    "pug" : "^3.0.2"
+    "express": "^4.18.2",
+    "pug": "^3.0.2",
+    "socket.io": "^4.7.0"
   }
-
 }
